# Nonefinity_BE

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.cursor/rules/: pydantic.mdc
app/: main.py
app/agents/: context.py  main.py
app/api/: __init__.py  api_keys.py  auth.py  chat.py  credential.py  dataset.py  duckdb.py  embedding.py  file.py  folder.py  google.py  integrate.py  intergrate.py  knowledge_store.py  mcp.py  model.py  mongodb.py  provider.py  storage.py  tasks.py  webhooks.py
app/configs/: __init__.py  providers.yaml  settings.py  setup.py
app/consts/: user_event_type.py
app/core/: exceptions.py
app/crud/: __init__.py  api_key.py  base.py  chat.py  chat_history.py  credential.py  dataset.py  file.py  file_version.py  folder.py  integrate.py  intergrate.py  knowledge_store.py  mcp.py  model.py  task.py  user.py
app/databases/: __init__.py  duckdb.py  duckdb_manager.py  mongodb.py  qdrant.py  redis.py
app/middlewares/: __init__.py  cors.py  sentry.py
app/models/: __init__.py  api_key.py  base.py  chat.py  credential.py  dataset.py  file.py  file_version.py  folder.py  intergrate.py  knowledge_store.py  mcp.py  model.py  product.py  provider.py  soft_delete_mixin.py  task.py  time_mixin.py  user.py
app/schemas/: __init__.py  api_key.py  chat.py  credential.py  dataset.py  embedding.py  file.py  file_version.py  folder.py  integration.py  intergrate.py  knowledge_store.py  mcp.py  model.py  provider.py  response.py  user.py
app/services/: __init__.py  (+23 more)
docs/: README_EN.md  README_VI.md
(+34 files in other folders)
