[project]
name = "nonefinity-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.1",
    "beanie>=2.0.0",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis[hiredis]>=6.4.0",
    "sentry-sdk[fastapi]>=2.35.0",
    "clerk-backend-api>=3.2.1",
    "svix>=1.75.0",
    "minio>=7.2.16",
    "PyJWT>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
    "pandas>=2.3.2",
    "duckdb>=1.4.0",
    "pyarrow>=18.0.0",
    "openpyxl>=3.1.5",
    "chardet>=5.2.0",
    "PyYAML>=6.0.2",
    "cryptography>=42.0.0",
    "aiohttp>=3.10.10",
    "celery[redis]>=5.3.0",
    "qdrant-client>=1.12.1",
    "pypdf>=4.3.1",
    "pip>=25.2",
    "scalar-fastapi>=1.4.2",
    "sqlparse>=0.5.3",
    "sqlglot>=27.20.0",
    "hf_xet>=0.4.0",
    "langchain>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.0",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "composio>=0.9.1",
    "composio-langchain>=0.9.1",
    "nuitka>=2.8.4",
    "flower>=2.0.1",
]
